--- a/GrandadAudioPlayer/xaml/ControlsView.xaml
+++ b/GrandadAudioPlayer/xaml/ControlsView.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding PlaylistViewModel ,Source={StaticResource Locator}}">
     <Grid HorizontalAlignment="Center" Margin="5">
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button Height="45" Command="{Binding PreviousCommand}" Style="{StaticResource MaterialDesignRaisedButton}" Margin="5">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" Margin="5">
@@ -39,6 +43,18 @@
                 </StackPanel>
             </Button>
         </StackPanel>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="4*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Style="{DynamicResource MaterialDesignTitleTextBlock}">Volume: </TextBlock>
+            <Slider Grid.Column="1"
+                Margin ="5"
+                Minimum="0" Maximum="100" Style="{DynamicResource MaterialDesignSlider}" Value="{Binding Volume}"
+                TickFrequency="5" 
+                ></Slider>
+        </Grid>
     </Grid>
 
 </UserControl>
