--- a/GrandadAudioPlayer/xaml/FolderView.xaml
+++ b/GrandadAudioPlayer/xaml/FolderView.xaml
@@ -7,6 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              DataContext="{Binding FolderViewModel, Source={StaticResource Locator}}">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <Style TargetType="{x:Type TreeViewItem}" BasedOn="{StaticResource {x:Type TreeViewItem}}">
+                <Setter Property="IsExpanded" Value="True" />
+            </Style>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
 
         <TreeView ItemsSource="{Binding RootFolder}" SelectedItemChanged="TreeView_SelectedItemChanged">
@@ -18,7 +25,6 @@
                     <TextBlock Text="{Binding Name}" Padding="0,5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}"></TextBlock>
                 </DataTemplate>
             </TreeView.Resources>
-
         </TreeView>
     </Grid>
 </UserControl>
