--- a/GrandadAudioPlayer/xaml/InformationView.xaml
+++ b/GrandadAudioPlayer/xaml/InformationView.xaml
@@ -11,6 +11,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0"  Text="Track Information" Style="{DynamicResource MaterialDesignTitleTextBlock}" Margin="5,5,5,5"></TextBlock>
@@ -36,5 +37,15 @@
                 </MultiBinding>
             </TextBlock.Text>
         </TextBlock>
+        <Grid Grid.Row="4">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="6*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Margin="5" Text="Position:" Style="{DynamicResource MaterialDesignSubheadingTextBlock}"/>
+            <ProgressBar Grid.Column="1" Value="{Binding PositionPercentage, Mode=OneWay}" Height="10" />
+            <TextBlock Grid.Column="2" Margin="5" Style="{DynamicResource MaterialDesignSubheadingTextBlock}" Text="{Binding Position}" />
+        </Grid>
     </Grid>
 </UserControl>
